:sparkles: [#180] Add templates/js/scss for govmetric

--- a/src/openforms/analytics_tools/templates/analytics_tools/all_bottom.html
+++ b/src/openforms/analytics_tools/templates/analytics_tools/all_bottom.html
@@ -1,3 +1,4 @@
 <template class="analytics-scripts">
     {% include "analytics_tools/siteimprove.html" with request=request only %}
+    {% include "analytics_tools/govmetric.html" with request=request  form_slug=form.slug only %}
 </template>
