--- a/src/openforms/ui/static/ui/scss/components/_index.scss
+++ b/src/openforms/ui/static/ui/scss/components/_index.scss
@@ -14,3 +14,7 @@
 @import 'info-bar';
 @import 'cookie-notice';
 @import 'cookie-group';
+
+// Analytics
+@import './google-tag-manager';
+@import './govmetric';
