:bug: [#3616] Load CSS needed by the page

--- a/src/openforms/templates/includes/forms/errorlist.html
+++ b/src/openforms/templates/includes/forms/errorlist.html
@@ -1,6 +1,6 @@
-<div class="openforms-errors">
+<div class="utrecht-form-field-description utrecht-form-field-description--invalid utrecht-form-field-description--openforms-errors">
     {% for error in errors %}
-        <div class="openforms-message openforms-message--error">
+        <div class="form-text error">
             {{ error }}
         </div>
     {% endfor %}
