--- a/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
+++ b/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
@@ -1,6 +1,10 @@
 {% extends 'ui/views/abstract/detail.html' %}
 {% load i18n static %}
 
+{% block extra_css %}
+    <link href="{% static 'bundles/core-css.css' %}" media="all" rel="stylesheet"/>
+{% endblock %}
+
 {% block card %}
 <div class="openforms-card">
     <header class="openforms-card__header">
