[#3616] Added missing margin to form definition configuration

--- a/src/openforms/scss/components/builder/_builder.scss
+++ b/src/openforms/scss/components/builder/_builder.scss
@@ -42,6 +42,10 @@ li.nav-item {
       float: none;
       width: initial;
     }
+
+    input {
+      margin-bottom: 10px;
+    }
   }
 
   .row {
