--- a/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
+++ b/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
@@ -2,7 +2,10 @@
 {% load i18n static %}
 
 {% block extra_css %}
+    {# Needed for the styling of the auth-mode class #}
     <link href="{% static 'bundles/core-css.css' %}" media="all" rel="stylesheet"/>
+    {# Needed for the overwrites of the formio-error-wrapper class #}
+    <link href="{% static 'sdk/open-forms-sdk.css' %}" media="all" rel="stylesheet"/>
 {% endblock %}
 
 {% block card %}
