:lipstick: [#3616] box-sizing border-box breaks the choices.js styling

--- a/src/openforms/ui/static/ui/scss/components/_page.scss
+++ b/src/openforms/ui/static/ui/scss/components/_page.scss
@@ -24,8 +24,7 @@
     // TODO: remove of-layout support in Open Forms 3.0
     background-color: var(--of-layout-background-color, var(--utrecht-page-background-color));
 
-    &,
-    & * {
+    .utrecht-page-content {
       box-sizing: border-box;
     }
 
