--- a/src/openforms/scss/components/admin/_index.scss
+++ b/src/openforms/scss/components/admin/_index.scss
@@ -27,6 +27,7 @@
 @import './logic-action';
 @import './logic-type-selection';
 @import './servicefetchconfiguration-picker';
+@import './mappings';
 
 // form list
 @import './form-category';
