--- a/src/openforms/templates/admin/base_site.html
+++ b/src/openforms/templates/admin/base_site.html
@@ -38,9 +38,9 @@
     <a href="{% url 'admin:password_change' %}">{% trans 'Change password' %}</a> /
     {% endif %}
 
-    {% url 'admin:two_factor:profile' as 2fa_profile_url %}
-    {% if 2fa_profile_url %}
-        <a href="{{ 2fa_profile_url }}">{% trans "Manage two-factor auth" %}</a> /
+    {% url 'maykin_2fa:account_security' as 2fa_account_security_url %}
+    {% if 2fa_account_security_url %}
+        <a href="{{ 2fa_account_security_url }}">{% trans "Account security" %}</a> /
     {% endif %}
 
     <a href="{% url 'admin:logout' %}">{% trans 'Log out' %}</a>
