:ok_hand: [#3730] PR Feedback

--- a/src/openforms/scss/components/admin/_mappings.scss
+++ b/src/openforms/scss/components/admin/_mappings.scss
@@ -1,5 +1,7 @@
+@use 'microscope-sass/lib/bem';
+
 .mappings {
-  &__mapping {
+  @include bem.element('mapping') {
     display: flex;
     flex-direction: column;
     gap: 20px;
