:recycle: [#3049] Move default/light theme styles into their own file
Similar to the dark theme, this should make maintaining the different
themes easier.

--- a/src/openforms/scss/_vars.scss
+++ b/src/openforms/scss/_vars.scss
@@ -1,4 +1,6 @@
 /* Colors */
+// TODO: these sass variables are deprecated in favour of design tokens/css custom
+// properties.
 $color_primary: #04a5bb;
 $color_primary_dark: #017092;
 $color_primary_light: #c3eaef;
