--- a/src/openforms/scss/admin/_admin_theme.scss
+++ b/src/openforms/scss/admin/_admin_theme.scss
@@ -7,57 +7,13 @@ DO NOT PUT ANY TARGET APP-SPECIFIC RULES HERE.
 @use 'sass:selector' as selector;
 
 @use './themes/dark' as dark-theme;
+@use './themes/light' as light-theme;
 
 @import 'microscope-sass/lib/bem';
 
 @import '../vars';
 
-// override django CSS variables
-// see admin/static/admin/css/base.css for a reference
-:root {
-  --primary: #{$color_primary} !important;
-  --accent: #{$color_secondary};
-  --secondary: #{$color_primary} !important;
-  --primary-fg: #{$color_lightest};
-
-  --header-color: #{$color_secondary_light};
-
-  --breadcrumbs-fg: #{$color_primary};
-  --breadcrumbs-link-fg: var(--body-fg);
-  --breadcrumbs-link-hover: #{$color-darkest}; // not in the core django vars
-  --breadcrumbs-bg: #{$color_secondary};
-
-  --link-fg: #{$color_link};
-  --link-hover-color: #{$color_link_hover};
-  --link-selected-fg: #5b80b2;
-
-  // #748 client requested increased contrast for form-row borders
-  // here we override a django admin style
-  --hairline-color: #e5e5e5;
-
-  // --button-bg: var(--primary);
-  --button-fg: #{$color_lightest};
-  --button-hover-bg: #{$color_primary_dark};
-  --default-button-bg: #{$color_primary_dark};
-  --default-button-hover-bg: #{$color_darkest};
-  --close-button-bg: #{$color_dark_light};
-  --close-button-hover-bg: #{$color_dark};
-
-  --object-tools-bg: #888;
-  --object-tools-hover-bg: #{$color_dark};
-
-  // custom variables
-  --form-input-bg: var(--body-bg);
-  --react-tab-border-color: #{$color-secondary-dark};
-  --list-item-active-bg: #{$color-secondary};
-  --list-item-active-fg: var(--primary);
-  --edit-panel-title-bg: #{$color-secondary-dark};
-  --edit-panel-title-fg: #{$color-dark};
-  --input-group-text-bg: #{$color-secondary-dark};
-  --input-group-text-fg: #{$color-dark};
-  --formio-dropdown-highlighted-bg: #f2f2f2;
-}
-
+@include light-theme.styles;
 @include dark-theme.styles;
 
 /* Overrides */
