:lipstick: [#3049] Fix markup and styling of form fields
* Fixed missing (new) class name in react components to apply
  inline labels + fields
* Override django admin styling to not vertically stretch input fields
  for labels longer than 160px that wrap unto the next line
* Override checkbox styling to vertically center checkbox + label
  instead of the weird offsets we otherwise have.

It's probably wise to re-do the admin overrides implementation from
vanilla admin CSS again to see what is actually still needed, but
ideally we'd have visual regression testing set up for all involved
components.

--- a/src/openforms/scss/_vars.scss
+++ b/src/openforms/scss/_vars.scss
@@ -24,5 +24,8 @@ $color-tooltip-border: #f7f071;
 $color-tooltip-text: #000;
 $django-hijack-yellow: #ffe761;
 
-/* Dimensions */
-$input-field-size: 40em; // original: 20em;
+:root {
+  /* Dimensions */
+  --of-admin-input-field-size: 40em; // original: 20em;
+  --of-admin-checkbox-gap: 5px;
+}
