--- a/src/openforms/scss/components/admin/_json-widget.scss
+++ b/src/openforms/scss/components/admin/_json-widget.scss
@@ -4,7 +4,7 @@
 
 .json-widget {
   textarea {
-    width: $input-field-size;
+    width: var(--of-admin-input-field-size);
   }
 
   @include bem.modifier('collapsed') {
