--- a/src/openforms/scss/_vars.scss
+++ b/src/openforms/scss/_vars.scss
@@ -28,4 +28,10 @@ $django-hijack-yellow: #ffe761;
   /* Dimensions */
   --of-admin-input-field-size: 40em; // original: 20em;
   --of-admin-checkbox-gap: 5px;
+
+  /* Tooltip */
+  --of-admin-tooltip-background-color: #fffeaa;
+  --of-admin-tooltip-border-color: #f7f071;
+  --of-admin-tooltip-color: #000;
+  --of-admin-tooltip-size: 14px;
 }
