--- a/src/openforms/scss/admin/_admin_theme.scss
+++ b/src/openforms/scss/admin/_admin_theme.scss
@@ -8,6 +8,7 @@ DO NOT PUT ANY TARGET APP-SPECIFIC RULES HERE.
 
 @use './themes/dark' as dark-theme;
 @use './themes/light' as light-theme;
+@use './tooltip';
 
 @import 'microscope-sass/lib/bem';
 
@@ -396,41 +397,6 @@ body.popup {
 /**
  * Help text mouseover
  */
-div.help:hover {
-  text-indent: inherit;
-  width: auto;
-  background-image: none;
-  background-color: $color-tooltip-background;
-  border: 1px solid $color-tooltip-border;
-  color: $color-tooltip-text;
-  padding: 5px 5px 3px 5px !important;
-  max-width: 300px;
-  height: auto !important;
-  z-index: 10;
-}
-
-div.help {
-  cursor: help;
-  width: 16px;
-  height: 16px;
-  background-image: url(../admin/img/icon-unknown.svg);
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-size: 14px;
-  margin-left: 2px !important;
-  position: absolute;
-  text-indent: -9999px;
-}
-
-/* Overrides default Django CSS */
-.aligned label + p,
-.aligned label + div.readonly {
-  display: inline-block;
-  margin-left: inherit !important;
-}
-.aligned label + div.help {
-  margin-left: 2px !important;
-}
 
 /* Additional components seem to need the same behaviour */
 /* TODO: TinyMCE is different... */
