--- a/src/openforms/scss/admin/themes/_dark.scss
+++ b/src/openforms/scss/admin/themes/_dark.scss
@@ -77,6 +77,37 @@
   }
 }
 
+@mixin tinymce {
+  .tox {
+    .tox-toolbar__primary,
+    .tox-statusbar,
+    .tox-menu {
+      background-color: var(--form-input-bg);
+    }
+
+    .tox-dialog,
+    .tox-dialog__header,
+    .tox-dialog__footer {
+      background-color: var(--body-bg);
+    }
+
+    .tox-collection__item-label {
+      p,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      pre {
+        &[style] {
+          background-color: transparent !important;
+        }
+      }
+    }
+  }
+}
+
 /**
  * Aggregate the bits and pieces to define the dark theme style rules.
  */
@@ -94,6 +125,7 @@
     html[data-theme='auto'] {
       @include djai-variables;
       @include custom-css;
+      @include tinymce;
     }
   }
 
@@ -102,5 +134,6 @@
     @include variables;
     @include djai-variables;
     @include custom-css;
+    @include tinymce;
   }
 }
