--- a/src/openforms/forms/templates/admin/forms/form/change_list.html
+++ b/src/openforms/forms/templates/admin/forms/form/change_list.html
@@ -57,6 +57,7 @@
                     <tr
                         class="form-category {% if not category.is_leaf or category.form_count %}form-category--has-children{% endif %} {% if category.is_leaf %}form-category--leaf{% endif %} {% if category.is_leaf and category.depth > 1 %}form-category--collapsed{% endif %}"
                         data-id="{{ category.id }}"
+                        data-parent-id="{{ category.get_parent.id }}"
                         data-depth="{{ category.get_depth }}">
                         {# span action checkbox + first column #}
                         <th colspan="{{ result_headers|length }}" scope="col" class="form-category__name">
