:lipstick: Display errors above input field

--- a/src/openforms/scss/components/builder/_builder.scss
+++ b/src/openforms/scss/components/builder/_builder.scss
@@ -166,6 +166,10 @@ div.flatpickr-calendar.open {
     display: block;
     margin-left: 0;
     margin-right: 0;
+
+    ul.errorlist {
+      padding-left: 0px;
+    }
   }
 }
 
