--- a/src/openforms/scss/admin/themes/_light.scss
+++ b/src/openforms/scss/admin/themes/_light.scss
@@ -49,6 +49,7 @@
 
   // custom variables
   --form-input-bg: var(--body-bg);
+  --form-input-bg-readonly: #e9ecef;
   --react-tab-border-color: #ddd;
   --list-item-active-bg: #f3f3f3;
   --list-item-active-fg: var(--primary);
