[#3688] Small fixes in frontend

--- a/src/openforms/scss/admin/themes/_dark.scss
+++ b/src/openforms/scss/admin/themes/_dark.scss
@@ -121,6 +121,10 @@
   .formio-button-add-another {
     color: var(--body-fg) !important;
   }
+
+  pre {
+    color: var(--body-fg);
+  }
 }
 
 @mixin tinymce {
