--- a/src/openforms/submissions/templates/report/submission_report.html
+++ b/src/openforms/submissions/templates/report/submission_report.html
@@ -2,6 +2,7 @@
 {% get_solo 'config.GlobalConfiguration' as config %}
 {% get_theme as theme %}
 {% get_current_language as LANG %}
+{% now "DATETIME_FORMAT" as now_str %}
 <html lang="{{ LANG }}" class="{{ theme.get_classname }}">
     <head>
         <meta charset="utf-8">
@@ -36,7 +37,9 @@
                 <p>{% blocktrans with submission_date=report.submission.completed_on trimmed %}
                     Submitted on: {{ submission_date }}
                 {% endblocktrans %}</p>
-                <p>{% trans "Report created on:" %} {% now "DATETIME_FORMAT" %}</p>
+                <p>{% blocktrans trimmed %}
+                    Report created on: {{ now_str }}
+                {% endblocktrans %}</p>
                 <p>{% blocktrans with ref=report.submission.public_registration_reference trimmed %}
                     Your reference is: {{ ref }}
                 {% endblocktrans %}</p>
