:alien: Load CSS from formio-builder
Note that we leave off the .css extension so that the resulting styles
are embedded, instead of the entire file itself as the latter pulls in
a broken sourcemappingURL, which crashes the django staticfiles
collectstatic with the manifest storage (since it can't resolve
the URL to this file).

--- a/src/openforms/scss/screen.scss
+++ b/src/openforms/scss/screen.scss
@@ -1,6 +1,8 @@
 // design tokens
 @import '@open-formulieren/design-tokens/dist/index.css';
 
+@import '@open-formulieren/formio-builder/css/index';
+
 @import '../ui/static/ui/scss/settings';
 @import './vendor';
 @import './components';
