:bug: [#4269] Fixed DMN integration for real-world decision definitions
Backport-of: #4282

--- a/src/openforms/scss/components/admin/_index.scss
+++ b/src/openforms/scss/components/admin/_index.scss
@@ -27,7 +27,7 @@
 @import './logic-action';
 @import './logic-type-selection';
 @import './servicefetchconfiguration-picker';
-@import './mappings';
+@import './logic-dmn';
 
 // form list
 @import './form-category';
