--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -78,6 +78,13 @@
     margin-block-end: 0;
   }
 
+  &__section-title {
+    font-weight: 300;
+    font-size: 1.2rem;
+    margin-block-start: 20px;
+    margin-block-end: 10px;
+  }
+
   &__form {
     display: flex;
     flex-direction: column;
