:sparkles: [#4269] Add overview table of defined input clauses for selected table
This should help form builders configure DMN tables to see
which input expressions are expected by the decision engine.

--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -78,6 +78,13 @@
     margin-block-end: 0;
   }
 
+  &__section-title {
+    font-weight: 300;
+    font-size: 1rem;
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+
   &__form {
     display: flex;
     flex-direction: column;
