--- a/src/openforms/scss/components/admin/_ReactModal.scss
+++ b/src/openforms/scss/components/admin/_ReactModal.scss
@@ -80,9 +80,9 @@
 
   &__section-title {
     font-weight: 300;
-    font-size: 1rem;
-    margin-block-start: 0;
-    margin-block-end: 0;
+    font-size: 1.2rem;
+    margin-block-start: 20px;
+    margin-block-end: 10px;
   }
 
   &__form {
