--- a/src/openforms/emails/templates/emails/templatetags/cosign_information.html
+++ b/src/openforms/emails/templates/emails/templatetags/cosign_information.html
@@ -1,4 +1,4 @@
-{% load static i18n %}
+{% load i18n %}
 
 {% if cosign_complete or waiting_on_cosign %}<h2 style="margin: 1em 0; font-size: 1.5em;">{% trans "Co-sign information" %}</h2>{% endif %}
 {% if cosign_complete %}
