--- a/src/openforms/scss/components/admin/_logic-rule.scss
+++ b/src/openforms/scss/components/admin/_logic-rule.scss
@@ -60,7 +60,8 @@ $logic-line-breakpoint: 1800px !default;
 
   @include element('header') {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+    column-gap: 10px;
     align-items: center;
     margin-bottom: 0.5em;
     padding: 0 1em;
