:bug: [#4278] Update variable references on variable/component key change

--- a/src/openforms/scss/admin/themes/_dark.scss
+++ b/src/openforms/scss/admin/themes/_dark.scss
@@ -38,6 +38,8 @@
   --input-group-text-bg: #333;
   --input-group-text-fg: var(--body-fg);
   --formio-dropdown-highlighted-bg: #333;
+
+  --json-data-preview-background-color: black;
 }
 
 @mixin djai-variables {
