:art: [#4341] Fix prettier/import sorting setup
Looks like there's an issue with picking up the config file, possibly
because prettier is also a dependency of storybook. Moving the config
to package.json reveals a bunch of code style issues and makes the
warnings on the CLI go away.

--- a/src/openforms/scss/admin/_admin_theme.scss
+++ b/src/openforms/scss/admin/_admin_theme.scss
@@ -253,7 +253,9 @@ div.breadcrumbs {
   left: 50%;
   margin-left: -150px;
   z-index: 1000001;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 /**
