--- a/src/openforms/scss/admin/_app_overrides.scss
+++ b/src/openforms/scss/admin/_app_overrides.scss
@@ -3,6 +3,7 @@
 
  Generic overrides should go in _admin_theme.scss
  */
+@use 'microscope-sass/lib/bem';
 @import '~microscope-sass/lib/responsive';
 @import '~microscope-sass/lib/util';
 
@@ -96,22 +97,27 @@ $djai-padding--tablet: 30px;
   text-align: center;
   clear: both;
   padding-top: 1em;
+
+  @include bem.modifier('disabled') {
+    display: none;
+  }
 }
 
 .admin-login-divider {
-  text-align: center;
-  clear: both;
-  padding-top: 1em;
-
-  width: 100%;
-  text-align: center;
-  border-bottom: 1px solid #ccc;
-  line-height: 0.1em;
-  margin: 10px 0 10px;
-
-  span {
-    background: #fff;
-    padding: 0 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-block-start: 1em;
+  &:after,
+  &:before {
+    content: '';
+    display: block;
+    border-bottom: 1px solid var(--border-color);
+    flex-grow: 1;
+  }
+  > span {
+    flex-shrink: 0;
+    padding-inline: 10px;
   }
 }
 
@@ -119,8 +125,14 @@ $djai-padding--tablet: 30px;
  * mozilla-django-oidc-db
  * hide the regular admin login form by default if OIDC is enabled
  */
-#login-form:has(~ .admin-login-oidc) {
-  display: none;
+#login-form {
+  &:has(~ .admin-login-option--oidc) {
+    display: none;
+  }
+
+  &.login-form--enabled {
+    display: block;
+  }
 }
 
 /* Styling for react-jsonschema-form */
