:bug: [#4403] Fix submission PDF layout for empty values
previously, empty values did not take up any space, breaking the submission PDF layout if any fieldsets were used or if fields did not have data

Backport-of: #4404

--- a/src/openforms/scss/pdfs/_submission-step-row.scss
+++ b/src/openforms/scss/pdfs/_submission-step-row.scss
@@ -49,6 +49,7 @@
     width: 60%;
     word-break: break-all;
     margin-left: 40%;
+    min-height: 1.5em; // required to ensure styling still works if value has no text
 
     // wysiwyg content
     p {
