:lipstick: Add selection style fix for TinyMCE in dark mode
The link text was unreadable against the background color of the
selection.

--- a/src/openforms/scss/admin/themes/_dark.scss
+++ b/src/openforms/scss/admin/themes/_dark.scss
@@ -158,6 +158,13 @@
       }
     }
   }
+
+  .mce-content-body {
+    // Fix dark mode selections
+    [data-mce-selected='inline-boundary'] {
+      background-color: #0a2647;
+    }
+  }
 }
 
 @mixin ckeditor-variables {
