[#4409] Changed payment status text in registration pdf report

--- a/src/openforms/submissions/templates/report/submission_report.html
+++ b/src/openforms/submissions/templates/report/submission_report.html
@@ -81,7 +81,7 @@
             <section class="payment-info">
                 <div class="submission-step-row">
                     <div class="submission-step-row__label">
-                        {% trans "Total payment required" %}
+                        {% trans "Total amount" %}
                     </div>
                     <div class="submission-step-row__value">
                         &euro; {{ report.submission.price }}
